--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "invoicegen",
-  "version": "1.0.0",
+  "name": "invoicegen2",
+  "version": "1.0.6",
   "description": "Npm package for invoice generation.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "lib/index.js",
   "author": "IJustDev",
   "license": "MIT",
   "dependencies": {
-    "pdfkit": "^0.10.0"
+    "pdfkit": "^0.10.0",
+    "voilab-pdf-table": "^0.4.1"
   }
 }
